@@ -1,3 +1,11 @@
+2005/02/21 Jamal James <teflon114@gmail.com>
+* Added code to deny MKD of a dir thats already nuked
+* Added 2 setings to zipscript.conf
+  #only allow files found in the sfv file [true/false]
+  sfv.restrict.files=true
+  #allow multiple sfv files in one dir [true/false]
+  allow.multi.sfv=false
+
 2005/02/13 Matt Zimmerman <zubov@users.sourceforge.net>
 * Updated perms.conf.dist to reflect login_prompt and secure(SSL/TLS)
 * Login statistics now work properly
